Davis Center Maps
Davis Center Maps

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6736,7 +6736,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-11T15:44:43Z</date>
+						<date>2019-02-13T17:16:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6861,6 +6861,16 @@
 								<key>Size</key>
 								<integer>114505</integer>
 							</dict>
+							<key>files/stacks-image-d1e9fe8-1200x782.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								NoqQJI0Flu+I
+								R1LiSG3/ZA==
+								</data>
+								<key>Size</key>
+								<integer>563060</integer>
+							</dict>
 							<key>files/stacks-image-d4950dd-1200x786.png</key>
 							<dict>
 								<key>Digest</key>
@@ -6915,11 +6925,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fWYVz1Yo6t9s
-								025nHf54uQ==
+								zQlhXAQa08AY
+								vxQAm7x0YA==
 								</data>
 								<key>Size</key>
-								<integer>96219</integer>
+								<integer>96757</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6932,7 +6942,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-11T15:17:26Z</date>
+						<date>2019-02-13T17:16:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7537,6 +7547,16 @@
 								<key>Size</key>
 								<integer>31635</integer>
 							</dict>
+							<key>files/stacks-image-baa7b8a-1200x782.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								NoqQJI0Flu+I
+								R1LiSG3/ZA==
+								</data>
+								<key>Size</key>
+								<integer>563060</integer>
+							</dict>
 							<key>files/stacks-image-bce74cf-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7731,11 +7751,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rYpdEDKFkV23
-								C9oOYykXVA==
+								H5xm0xtVvk/R
+								VL3bFnvPfg==
 								</data>
 								<key>Size</key>
-								<integer>247504</integer>
+								<integer>248042</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12912,7 +12932,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:10:43Z</date>
+						<date>2019-02-13T17:16:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13951,11 +13971,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9O/oeWMbyUaN
-								xh4tvm7pZA==
+								ynJJ/HdPRtPF
+								vTBj/O8iZQ==
 								</data>
 								<key>Size</key>
-								<integer>3779</integer>
+								<integer>3705</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14039,7 +14059,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBCkOK3MnBgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HBCkQyLEYPgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -14050,7 +14070,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEKQ4rczLyA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEKRDIsSMeA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
