--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-11T15:17:26Z</date>
+						<date>2019-02-13T17:16:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -640,6 +640,16 @@
 								<key>Size</key>
 								<integer>31635</integer>
 							</dict>
+							<key>files/stacks-image-baa7b8a-1200x782.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								NoqQJI0Flu+I
+								R1LiSG3/ZA==
+								</data>
+								<key>Size</key>
+								<integer>563060</integer>
+							</dict>
 							<key>files/stacks-image-bce74cf-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -834,11 +844,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rYpdEDKFkV23
-								C9oOYykXVA==
+								H5xm0xtVvk/R
+								VL3bFnvPfg==
 								</data>
 								<key>Size</key>
-								<integer>247504</integer>
+								<integer>248042</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
