added MR and CS to organizer list
added MR and CS to organizer list

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-02-13T17:31:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -149,6 +149,16 @@
 								</data>
 								<key>Size</key>
 								<integer>558997</integer>
+							</dict>
+							<key>files/stacks-image-408abbc-500x280.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SlQExtHD8ITB
+								L9RQuJjb3g==
+								</data>
+								<key>Size</key>
+								<integer>27838</integer>
 							</dict>
 							<key>files/stacks-image-506ca91.png</key>
 							<dict>
@@ -340,6 +350,16 @@
 								<key>Size</key>
 								<integer>25161</integer>
 							</dict>
+							<key>files/stacks-image-d7139db.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								d8N940Mz+Z7w
+								r1KttVpXdw==
+								</data>
+								<key>Size</key>
+								<integer>204779</integer>
+							</dict>
 							<key>files/stacks-image-f14500c-500x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -374,31 +394,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jHkw0K4FG/00
-								HqBXyIB/jA==
+								EUtkimLqGFMM
+								y+bpJ1P82A==
 								</data>
 								<key>Size</key>
-								<integer>208668</integer>
+								<integer>216515</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								VQCTNQNJ0Fv7
-								Lvh0vA7poQ==
+								RvJyyAWwncRR
+								HNDTNJqPtg==
 								</data>
 								<key>Size</key>
-								<integer>29119</integer>
+								<integer>29483</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ft+lIq98z+Gh
-								OyMPw6xqMA==
+								oG/B5G60MJ6J
+								tSJTCBAVDw==
 								</data>
 								<key>Size</key>
-								<integer>140453</integer>
+								<integer>146735</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
