--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6942,7 +6942,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:16:18Z</date>
+						<date>2019-02-13T17:31:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7196,6 +7196,16 @@
 								</data>
 								<key>Size</key>
 								<integer>33052</integer>
+							</dict>
+							<key>files/stacks-image-408abbc-500x280.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SlQExtHD8ITB
+								L9RQuJjb3g==
+								</data>
+								<key>Size</key>
+								<integer>27838</integer>
 							</dict>
 							<key>files/stacks-image-506ca91.png</key>
 							<dict>
@@ -7637,6 +7647,16 @@
 								<key>Size</key>
 								<integer>25161</integer>
 							</dict>
+							<key>files/stacks-image-d7139db.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								d8N940Mz+Z7w
+								r1KttVpXdw==
+								</data>
+								<key>Size</key>
+								<integer>204779</integer>
+							</dict>
 							<key>files/stacks-image-e5e8064-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7731,31 +7751,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Gpze9qDes7Vd
-								TG0COC5ssQ==
+								9Vaj5U1du1zD
+								iZuU7b8cVw==
 								</data>
 								<key>Size</key>
-								<integer>331975</integer>
+								<integer>339822</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								VB+hM+WxDxa/
-								hHSsp94+wA==
+								tJKsW2MMQDVd
+								ItVzy4K9FQ==
 								</data>
 								<key>Size</key>
-								<integer>32031</integer>
+								<integer>32395</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								H5xm0xtVvk/R
-								VL3bFnvPfg==
+								UNg++2o+A+eE
+								RnHHTBj9Rg==
 								</data>
 								<key>Size</key>
-								<integer>248042</integer>
+								<integer>254324</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8872,7 +8892,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-02-13T17:31:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8986,6 +9006,16 @@
 								</data>
 								<key>Size</key>
 								<integer>558997</integer>
+							</dict>
+							<key>files/stacks-image-408abbc-500x280.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SlQExtHD8ITB
+								L9RQuJjb3g==
+								</data>
+								<key>Size</key>
+								<integer>27838</integer>
 							</dict>
 							<key>files/stacks-image-506ca91.png</key>
 							<dict>
@@ -9177,6 +9207,16 @@
 								<key>Size</key>
 								<integer>25161</integer>
 							</dict>
+							<key>files/stacks-image-d7139db.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								d8N940Mz+Z7w
+								r1KttVpXdw==
+								</data>
+								<key>Size</key>
+								<integer>204779</integer>
+							</dict>
 							<key>files/stacks-image-f14500c-500x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -9211,31 +9251,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jHkw0K4FG/00
-								HqBXyIB/jA==
+								EUtkimLqGFMM
+								y+bpJ1P82A==
 								</data>
 								<key>Size</key>
-								<integer>208668</integer>
+								<integer>216515</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								VQCTNQNJ0Fv7
-								Lvh0vA7poQ==
+								RvJyyAWwncRR
+								HNDTNJqPtg==
 								</data>
 								<key>Size</key>
-								<integer>29119</integer>
+								<integer>29483</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ft+lIq98z+Gh
-								OyMPw6xqMA==
+								oG/B5G60MJ6J
+								tSJTCBAVDw==
 								</data>
 								<key>Size</key>
-								<integer>140453</integer>
+								<integer>146735</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12932,7 +12972,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:16:18Z</date>
+						<date>2019-02-13T17:31:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13971,8 +14011,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ynJJ/HdPRtPF
-								vTBj/O8iZQ==
+								LUSZRCvvpcDc
+								Y9I1ce3tgQ==
 								</data>
 								<key>Size</key>
 								<integer>3705</integer>
@@ -14059,7 +14099,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBCkQyLEYPgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HBCkX7+ruhgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -14070,7 +14110,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEKRDIsSMeA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEKRfv6vh+A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
