--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -9288,7 +9288,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-06T16:33:46Z</date>
+						<date>2019-02-13T18:05:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9332,6 +9332,26 @@
 								</data>
 								<key>Size</key>
 								<integer>34905</integer>
+							</dict>
+							<key>files/stacks-image-34e7445-248x104.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								2sUkOVCAgAcp
+								dV6fH0+n0w==
+								</data>
+								<key>Size</key>
+								<integer>14766</integer>
+							</dict>
+							<key>files/stacks-image-34e7445-248x104@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uOcVN3cS9ubO
+								PJtjjXxijA==
+								</data>
+								<key>Size</key>
+								<integer>36359</integer>
 							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
@@ -9403,6 +9423,16 @@
 								<key>Size</key>
 								<integer>83593</integer>
 							</dict>
+							<key>files/stacks-image-8c810c5.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								XUMW4lhKAgNP
+								5CeuqjFU/w==
+								</data>
+								<key>Size</key>
+								<integer>2184</integer>
+							</dict>
 							<key>files/stacks-image-8e88332-100x104.png</key>
 							<dict>
 								<key>Digest</key>
@@ -9433,6 +9463,26 @@
 								<key>Size</key>
 								<integer>21714</integer>
 							</dict>
+							<key>files/stacks-image-a3bad70-200x170.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LTd3rtSYw/UO
+								66CMjN5v1g==
+								</data>
+								<key>Size</key>
+								<integer>35960</integer>
+							</dict>
+							<key>files/stacks-image-a3bad70-200x170@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								gQifc4f3O29z
+								/0MzMQYUtA==
+								</data>
+								<key>Size</key>
+								<integer>111879</integer>
+							</dict>
 							<key>files/stacks-image-cc75d0b-150x138.png</key>
 							<dict>
 								<key>Digest</key>
@@ -9453,15 +9503,25 @@
 								<key>Size</key>
 								<integer>67264</integer>
 							</dict>
+							<key>files/stacks-image-fd0e8b0-248x56.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xbuJ2rziJrvi
+								GGDomNbt6A==
+								</data>
+								<key>Size</key>
+								<integer>16266</integer>
+							</dict>
 							<key>files/stacks_page_page59.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								XtMzQrWRigU6
-								EiP3I5vYiw==
+								ssfdXsty9lrA
+								UJIAczAp4w==
 								</data>
 								<key>Size</key>
-								<integer>136179</integer>
+								<integer>144368</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -9477,11 +9537,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								D21+HDiMTNFl
-								nnj2xqMgnQ==
+								lV1XBfPzTqyj
+								vcQEzhjufg==
 								</data>
 								<key>Size</key>
-								<integer>67477</integer>
+								<integer>73183</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12972,7 +13032,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:31:33Z</date>
+						<date>2019-02-13T18:05:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14011,8 +14071,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LUSZRCvvpcDc
-								Y9I1ce3tgQ==
+								XiDCjQhmd4JL
+								gLgIQ7VQ8A==
 								</data>
 								<key>Size</key>
 								<integer>3705</integer>
@@ -14099,7 +14159,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBCkX7+ruhgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HBCkn0um9YgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -14110,7 +14170,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEKRfv6vh+A
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEKSfS6c6yA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
