--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6736,7 +6736,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:16:18Z</date>
+						<date>2019-02-13T22:21:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6905,11 +6905,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ACn4m2C74yjF
-								FPI3UnBoOQ==
+								eOxbAgkkcPW7
+								TgKOYh6Ydg==
 								</data>
 								<key>Size</key>
-								<integer>172145</integer>
+								<integer>173255</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6925,11 +6925,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zQlhXAQa08AY
-								vxQAm7x0YA==
+								kWABnsO/nI8m
+								CjK4Qt7Brw==
 								</data>
 								<key>Size</key>
-								<integer>96757</integer>
+								<integer>97355</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6942,7 +6942,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:31:33Z</date>
+						<date>2019-02-13T22:18:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7751,11 +7751,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9Vaj5U1du1zD
-								iZuU7b8cVw==
+								CsmVJgZDL+DH
+								ygLa2HmzBQ==
 								</data>
 								<key>Size</key>
-								<integer>339822</integer>
+								<integer>341436</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -7771,11 +7771,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UNg++2o+A+eE
-								RnHHTBj9Rg==
+								Mf67AK7Ul9wl
+								aaMK01uZMw==
 								</data>
 								<key>Size</key>
-								<integer>254324</integer>
+								<integer>255033</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7788,7 +7788,7 @@
 					<key>page54 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-10T13:59:22Z</date>
+						<date>2019-02-13T22:30:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7843,16 +7843,6 @@
 								<key>Size</key>
 								<integer>21714</integer>
 							</dict>
-							<key>files/stacks-image-d2c4351-164x250.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								wfnaH+A1NLQd
-								uQbysTmbZg==
-								</data>
-								<key>Size</key>
-								<integer>29271</integer>
-							</dict>
 							<key>files/stacks-image-eb41103.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7867,11 +7857,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vJbVVQIYuvWd
-								vfUnh4JzNg==
+								yrkMsW6nIgR+
+								83sTMxQ1HQ==
 								</data>
 								<key>Size</key>
-								<integer>129603</integer>
+								<integer>132636</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -7887,11 +7877,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ekdpA6TJszOh
-								LF5HwEYhwA==
+								9zF7wQ9C7T+s
+								ux31ZUlcbg==
 								</data>
 								<key>Size</key>
-								<integer>59935</integer>
+								<integer>61298</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7904,7 +7894,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:10:43Z</date>
+						<date>2019-02-13T22:34:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8243,11 +8233,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mf3jIwhX+ga7
-								P6oM6FPM3w==
+								ZZ7dH+F9hGQb
+								ostCO0zIzg==
 								</data>
 								<key>Size</key>
-								<integer>387871</integer>
+								<integer>389045</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -8263,11 +8253,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Xf+LNt8bI9ih
-								jjXND6dQbw==
+								a1sCdQWQjPlg
+								Ag3+dV+OfA==
 								</data>
 								<key>Size</key>
-								<integer>309960</integer>
+								<integer>310635</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8366,7 +8356,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-11T15:17:26Z</date>
+						<date>2019-02-13T22:34:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8855,11 +8845,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3wREVrCKoI12
-								ae2C+jJfZA==
+								jwXKQXyY3JSW
+								0/DQ6nMM+A==
 								</data>
 								<key>Size</key>
-								<integer>236502</integer>
+								<integer>235328</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
@@ -8875,11 +8865,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iW81RseQpuGe
-								wpYDDkNn/g==
+								X5TunjkEGrtm
+								/7KjK5JPMg==
 								</data>
 								<key>Size</key>
-								<integer>145666</integer>
+								<integer>145088</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12930,7 +12920,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-12T21:14:55Z</date>
+						<date>2019-02-13T22:34:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12979,11 +12969,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GgBKZb95py6y
-								QYnugtiuOw==
+								F6jA9BDHrnvK
+								Xe5umv0BnQ==
 								</data>
 								<key>Size</key>
-								<integer>5354</integer>
+								<integer>5450</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13032,7 +13022,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T18:05:27Z</date>
+						<date>2019-02-13T22:21:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14071,11 +14061,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XiDCjQhmd4JL
-								gLgIQ7VQ8A==
+								HGlctmMcs7aH
+								tSbs2phtpw==
 								</data>
 								<key>Size</key>
-								<integer>3705</integer>
+								<integer>4519</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14159,7 +14149,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBCkn0um9YgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HBCml7+4hmgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -14170,7 +14160,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEKSfS6c6yA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEKaXv7ipiA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
