--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:10:43Z</date>
+						<date>2019-02-13T22:34:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mf3jIwhX+ga7
-								P6oM6FPM3w==
+								ZZ7dH+F9hGQb
+								ostCO0zIzg==
 								</data>
 								<key>Size</key>
-								<integer>387871</integer>
+								<integer>389045</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Xf+LNt8bI9ih
-								jjXND6dQbw==
+								a1sCdQWQjPlg
+								Ag3+dV+OfA==
 								</data>
 								<key>Size</key>
-								<integer>309960</integer>
+								<integer>310635</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
