--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:16:18Z</date>
+						<date>2019-02-13T22:21:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -204,11 +204,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ACn4m2C74yjF
-								FPI3UnBoOQ==
+								eOxbAgkkcPW7
+								TgKOYh6Ydg==
 								</data>
 								<key>Size</key>
-								<integer>172145</integer>
+								<integer>173255</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zQlhXAQa08AY
-								vxQAm7x0YA==
+								kWABnsO/nI8m
+								CjK4Qt7Brw==
 								</data>
 								<key>Size</key>
-								<integer>96757</integer>
+								<integer>97355</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
