--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-11T15:17:26Z</date>
+						<date>2019-02-13T22:34:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,11 +524,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3wREVrCKoI12
-								ae2C+jJfZA==
+								jwXKQXyY3JSW
+								0/DQ6nMM+A==
 								</data>
 								<key>Size</key>
-								<integer>236502</integer>
+								<integer>235328</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
@@ -544,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iW81RseQpuGe
-								wpYDDkNn/g==
+								X5TunjkEGrtm
+								/7KjK5JPMg==
 								</data>
 								<key>Size</key>
-								<integer>145666</integer>
+								<integer>145088</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
