--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:31:33Z</date>
+						<date>2019-02-13T22:18:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -844,11 +844,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9Vaj5U1du1zD
-								iZuU7b8cVw==
+								CsmVJgZDL+DH
+								ygLa2HmzBQ==
 								</data>
 								<key>Size</key>
-								<integer>339822</integer>
+								<integer>341436</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -864,11 +864,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UNg++2o+A+eE
-								RnHHTBj9Rg==
+								Mf67AK7Ul9wl
+								aaMK01uZMw==
 								</data>
 								<key>Size</key>
-								<integer>254324</integer>
+								<integer>255033</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
