posted netschi hackathon
posted netschi hackathon

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6942,7 +6942,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T22:18:26Z</date>
+						<date>2019-02-14T16:00:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7771,11 +7771,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Mf67AK7Ul9wl
-								aaMK01uZMw==
+								hiCC6SWABvGB
+								AQSxJP/YAQ==
 								</data>
 								<key>Size</key>
-								<integer>255033</integer>
+								<integer>255197</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7894,7 +7894,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T22:34:29Z</date>
+						<date>2019-02-14T15:56:19Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8233,31 +8233,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZZ7dH+F9hGQb
-								ostCO0zIzg==
+								qkYnoPkXXWK+
+								gNyNO+oH2Q==
 								</data>
 								<key>Size</key>
-								<integer>389045</integer>
+								<integer>393216</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								V04PVzRX0+uE
-								qWv58rAnnw==
+								QYyjjbR875Z/
+								T8kjY5C2bw==
 								</data>
 								<key>Size</key>
-								<integer>39493</integer>
+								<integer>39675</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								a1sCdQWQjPlg
-								Ag3+dV+OfA==
+								OLWoKriq0Mev
+								Gtkseb008Q==
 								</data>
 								<key>Size</key>
-								<integer>310635</integer>
+								<integer>314547</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8270,7 +8270,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:10:43Z</date>
+						<date>2019-02-14T15:59:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8319,11 +8319,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mty1JrvTmcfg
-								77Fx8Z7G2A==
+								rrSp0WsGMB7h
+								TNv23npEJQ==
 								</data>
 								<key>Size</key>
-								<integer>171714</integer>
+								<integer>178059</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -8339,11 +8339,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Mk828/Zj/Z/t
-								+tUpB8mdGw==
+								KM256b2WCars
+								fF33T7XmBg==
 								</data>
 								<key>Size</key>
-								<integer>84831</integer>
+								<integer>89202</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12920,7 +12920,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T22:34:29Z</date>
+						<date>2019-02-14T15:59:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12969,8 +12969,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F6jA9BDHrnvK
-								Xe5umv0BnQ==
+								Z6neoTIWbmNB
+								GHBreuU6NQ==
 								</data>
 								<key>Size</key>
 								<integer>5450</integer>
@@ -13022,7 +13022,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T22:21:02Z</date>
+						<date>2019-02-14T15:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14061,8 +14061,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HGlctmMcs7aH
-								tSbs2phtpw==
+								1byOlqS+jO11
+								2PUkZp4LEw==
 								</data>
 								<key>Size</key>
 								<integer>4519</integer>
@@ -14149,7 +14149,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBCml7+4hmgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HBCuQaYUjcgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -14160,7 +14160,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEKaXv7ipiA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEK5BphTAGA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
