--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:10:43Z</date>
+						<date>2019-02-14T15:59:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mty1JrvTmcfg
-								77Fx8Z7G2A==
+								rrSp0WsGMB7h
+								TNv23npEJQ==
 								</data>
 								<key>Size</key>
-								<integer>171714</integer>
+								<integer>178059</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Mk828/Zj/Z/t
-								+tUpB8mdGw==
+								KM256b2WCars
+								fF33T7XmBg==
 								</data>
 								<key>Size</key>
-								<integer>84831</integer>
+								<integer>89202</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
