--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T22:18:26Z</date>
+						<date>2019-02-14T16:00:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -864,11 +864,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Mf67AK7Ul9wl
-								aaMK01uZMw==
+								hiCC6SWABvGB
+								AQSxJP/YAQ==
 								</data>
 								<key>Size</key>
-								<integer>255033</integer>
+								<integer>255197</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
